# anime-shot-all

./: .gitignore  README.md  main.py  pyproject.toml
anime_shot_all/: __init__.py  cli.py  config.py  crop.py  dedup.py  defaults.py  extract.py  files.py  gui.py  ignore_ranges.py  logging_utils.py  progress.py  stats.py  timecode.py  video.py  yolo_models.py
tests/: test_config_ignore.py  test_dedup_crop.py  test_extract.py  test_gui.py  test_logging_utils.py  test_progress.py  test_video.py  test_yolo_models.py
