[project]
name = "anime-shot-all"
version = "0.1.0"
description = "Gradio tool for collecting, deduplicating, and cropping anime training images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.44",
    "imagehash>=4.3",
    "dghs-imgutils>=0.19",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pillow>=10.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.26.0",
]
gpu = [
    "onnxruntime-gpu>=1.26.0",
]


[project.scripts]
anime-shot-all = "anime_shot_all.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
